Fix snippets cut off in mobile (#1552)

--- a/website/static/css/code-blocks.css
+++ b/website/static/css/code-blocks.css
@@ -4,6 +4,7 @@
   padding: 1em;
   position: relative;
   overflow-x: visible;
+  white-space: pre-wrap;
   border-left: 0;
   /* base 20px + header height */
   margin: 54px 0 20px;
